force-app/main/default/objects/GWB_Idea_Library__c/GWB_Idea_Library__c.object-meta.xml
<CustomObject>
    <label>Idea Library</label>
    <nameField>
        <label>Idea Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Idea Library</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>