force-app/main/default/objects/GWB_Idea_Library__c/fields/Applicable_Signal_Types__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Signal_Types__c</fullName>
    <label>Applicable Signal Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Micro-Stoppage</fullName>
            </value>
            <value>
                <fullName>Bin-Depletion</fullName>
            </value>
            <value>
                <fullName>Idle-Time</fullName>
            </value>
            <value>
                <fullName>Overproduction</fullName>
            </value>
            <value>
                <fullName>Quality-Defect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>