force-app/main/default/objects/GWB_Idea_Library__c/fields/Idea_Category__c.field-meta.xml
<CustomField>
    <fullName>Idea_Category__c</fullName>
    <label>Idea Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Material Flow</fullName>
            </value>
            <value>
                <fullName>Layout</fullName>
            </value>
            <value>
                <fullName>Workload Balancing</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Process Improvement</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>