force-app/main/default/objects/GWB_Idea_Library__c/fields/Preconditions__c.field-meta.xml
<CustomField>
    <fullName>Preconditions__c</fullName>
    <label>Preconditions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>