force-app/main/default/objects/GWB_Idea_Library__c/fields/Requires_Finance_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Finance_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Finance Approval</label>
    <type>Checkbox</type>
</CustomField>