force-app/main/default/objects/GWB_Idea_Library__c/fields/Requires_Quality_Review__c.field-meta.xml
<CustomField>
    <fullName>Requires_Quality_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Quality Review</label>
    <type>Checkbox</type>
</CustomField>