force-app/main/default/objects/GWB_Idea_Library__c/fields/Requires_Safety_Review__c.field-meta.xml
<CustomField>
    <fullName>Requires_Safety_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Safety Review</label>
    <type>Checkbox</type>
</CustomField>