force-app/main/default/objects/GWB_Idea_Library__c/fields/Typical_Effort__c.field-meta.xml
<CustomField>
    <fullName>Typical_Effort__c</fullName>
    <label>Typical Effort</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>