force-app/main/default/objects/GWB_Idea_Library__c/fields/Typical_FTE_Min__c.field-meta.xml
<CustomField>
    <fullName>Typical_FTE_Min__c</fullName>
    <label>Typical FTE Min</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>