force-app/main/default/objects/GWB_Idea_Library__c/listViews/All_Ideas.listView-meta.xml
<ListView>
    <fullName>All_Ideas</fullName>
    <label>All Ideas</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Idea_Category__c</columns>
    <columns>Applicable_Signal_Types__c</columns>
    <columns>Typical_FTE_Min__c</columns>
    <columns>Typical_FTE_Max__c</columns>
    <columns>Typical_Effort__c</columns>
    <sharedTo><allInternalUsers/></sharedTo>
</ListView>